MAINT: Fix contrast in ZON footer for A11y

--- a/sass/web.site/modules/_footer.sass
+++ b/sass/web.site/modules/_footer.sass
@@ -1,7 +1,7 @@
 // careful, the order of this pseudo class is important here
 %footer_dark
 	background-color: $zon-charcoal
-	color: $zon-grey
+	color: $zon-light-grey
 	a
 		color: inherit
 		+on-interaction
